Fixed contact form and dark mode for form

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1818,10 +1818,10 @@ input, select, textarea {
 		-webkit-appearance: none;
 		-ms-appearance: none;
 		appearance: none;
-		background: #f7f7f7;
+		background: #5f5f5f;
 		border-radius: 0.35em;
 		border: solid 2px transparent;
-		color: inherit;
+		color: #fff;
 		display: block;
 		outline: 0;
 		padding: 0 0.75em;
